--- a/project/src/main/webapp/resources/css/include_template.css
+++ b/project/src/main/webapp/resources/css/include_template.css
@@ -20,21 +20,21 @@
     display: flex;
     margin:auto;
 }
-/* .navLi{ */
+.navLi{
 /* 	text-align: end; */
-/*     width: 1500px; */
-/*     margin: auto; */
-/* } */
+    width: 1500px;
+    margin: auto;
+}
 .navbar1 ul {
     flex: 1;
     height: 120px;
-    text-align: center;
+/*     text-align: center; */
 }
 
 .navbar1 ul li {
     display: inline-block;
     list-style: none;
-    margin: -85px 20px;
+    margin: -85px 15px;
 }
 .navbar1 ul li a {
     margin-top: 1100px;
@@ -42,12 +42,13 @@
     color: #000;
     padding: 0 10px;
     position: relative;
-    font-size: 15px;
+    font-size: 20px;
+}
+.navbar1 ul li a:hover{
+    color:rgb(0, 177, 56);
 }
 
-.navbar1 ul li a:hover{
-	 color:rgb(0, 177, 56);
-}
+
 .navbar1 ul li a:hover::after {
     width: 80%;
 }
@@ -96,7 +97,26 @@
     /* nav a 간의 떨어지는값 일단 30으로 해봤습니다. */
     padding: 0 10px; 
     position: relative;
-    font-size: 20px;
+    font-size: 25px;
+}
+.logNav{
+	display: inline;
+	float: right;
+	margin-top: 57px;
+}
+.slideNav-container1{
+	width:80%;
+	margin:auto;
+}
+.slideNav-container2{
+	width:80%;
+	margin:auto;
+	margin-top: 330px;
+}
+.slideNav-container3{
+	width:100%;
+ 	margin:auto;
+    display: flex;
 }
 
 
