--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -28,11 +28,8 @@
 	margin-top: 100px;
     width: 1300px;
 }
-.widthLine{
-    margin: auto;
-    width: 100%;
-    border: 0.5px solid rgb(0, 0, 0,0.4);
-}
+
+
 .ct-test{
     margin-top: 50px;
     width: 100%;
@@ -61,7 +58,7 @@
     display: flex;
     margin-top: 50px;
     width: auto;
-    height: 300px;
+    height: 400px;
 }
 .ct2-text{
     width: 400px;
@@ -109,16 +106,12 @@
 
 
 /* ---------------미디어----------------------- */
-.media_main {
-		margin-top: 100px;
-}
-
 .media_content {
 	margin: auto;
+	margin-top: 40px;
 	display: flex;
 	width: 1300px;
 	height: 400px;
-	
 }
 
 /* border값 빼야함 */
@@ -179,7 +172,7 @@
     cursor: pointer;
 }
 
-.leftContainer > ul > li >a:hover:not(.active) {
+.leftContainer > ul > li:hover:not(.active) {
     background-color: rgb(66, 66, 66);
     color: white;
 }
@@ -663,15 +656,14 @@ border-radius: 5px;
 	color: white;
 	width: 350px;
 	height: 50px;
-	background-color: purple; 
+	background-color: gray; 
 	margin-left: -170px;
 	margin-top: 100px;
-	border-radius: 50px;
+	border-radius: 5px 5px;
 }
 
 .ex_content button:hover{
-	color: yellow;
-	background-color: rgba(31,57,141);;
+	background-color: purple;
 	cursor: pointer;
 }
 
@@ -695,7 +687,7 @@ border-radius: 5px;
 	width: 300px;
 	height: 40px;
 	border-radius: 10px;
-	top: 60px;
+	top: 80px;
 	display: inline-block;
 	margin-bottom: 5px;
 	padding-top: 3px;
@@ -729,10 +721,39 @@ border-radius: 5px;
 	height: 500px;
 /* 	border: 1px solid white; */
 	margin: auto;
-	margin-top: 30px;
+	margin-top: 50px;
 	display: flex;
 }
 
+.ex_content_p2_1{
+	width: 500px;
+	height: 500px;
+/* 	border: 1px solid white; */
+}
+
+.ex_content_p2_2{
+	width: 500px;
+	height: 500px;
+/* 	border: 1px solid white; */
+}
+
+.ex_content_p2_1 > img{
+	position: relative;
+	width: 495px;
+	height: 490px;
+	border: 1px solid white;
+	border-radius: 0;
+	top: -65px;
+}
+
+.ex_content_p2_2 > img{
+	position: relative;
+	width: 495px;
+	height: 490px;
+	border: 1px solid white;
+	border-radius: 0;
+	top: -65px;
+}
 
 .ex_content_p2 > button {
 	position: absolute;	
@@ -740,9 +761,9 @@ border-radius: 5px;
 	margin: auto;
 	width: 280px;
 	height: 50px;
-	top: 1100px;
+	top: 1330px;
 	left: 820px;
-	border-radius: 50px;
+	border-radius: 10px;
 }
 
 .ex_content_p3 {
@@ -795,21 +816,6 @@ border-radius: 5px;
 	margin: 50px 30px;
 }
 
-.ex_content_p6 {
-	width: 550px;
-	height: 250px;
-	margin: auto;
-	margin-top: 30px;
-	display: flex;
-}
-
-/* .ex_content_p6_text { */
-/* 	position: relative;	 */
-/* 	margin: auto; */
-/* 	color: white; */
-/* 	top: 220px; */
-/* 	font-size: 18px; */
-/* } */
 
 
 /* 로그인 */
@@ -1001,7 +1007,7 @@ border-radius: 5px;
     font-size: 18px;
 }
 
-tesssst
+/* tesssst */
 .myPageNav > ul > li >a:hover{
    color:rgb(0, 177, 56);
 }
@@ -1010,6 +1016,19 @@ tesssst
     margin: auto;
     width: 1300px;
     border: 0.5px solid rgb(0, 0, 0,0.4);
+}
+.widthLine1{
+    margin: auto;
+    width: 100%;
+    border: 0.2px solid rgb(108, 108, 108);
+}
+.widthLine3{
+	margin-top: 30px;
+}
+.widthLine3, .widthLine4{
+	margin: auto;
+	width: 100%;
+	border: 1px solid #fff;
 }
 .heightLine{
   
@@ -1046,6 +1065,19 @@ tesssst
 .rcText{
     margin: 70px 5%;
     /* background-color: red; */
+}
+.rcText{
+    margin: 70px 5%;
+    /* background-color: red; */
+}
+
+.rcText > ul > label{
+	margin-top: 5px;
+	display: block;
+}
+.rcText > ul > label > a{
+	text-decoration: none;
+	color:black;
 }
 .bottom{
     margin-top: 40px;
@@ -1147,120 +1179,9 @@ tesssst
 }
 
 
-/* 트레이너 매칭 */
-.tr_content {
-    margin: auto;
-    width: 70%;
-    height: 900px;
-    background-color: black;
-    border-radius: 60px 60px;
-    border: 2px solid royalblue;
-}
-
-.tr_content img {
-/* 	position: absolute; */
-	width: 100%;
-	height: 80%;
-	margin-top: 70px;
-	border: 4px solid 
-	border-radius: 60px 60px;
-}
-
-.tr_content h1 {
-	position: absolute;
-	font-size: 50px;
-	color: white;
-	margin-left: 100px;
-	margin-top: -500px;
-}
-
-.tr_content > p {
-	position: absolute;
-	font-size: 30px;
-	color: white;
-	margin-left: 50px;
-	margin-top: -350px;
-}
-
-.tr_content > button{
-	width: 50px;	
-	height: 50px;	
-}
-
-
-.tr_content_p1_1,
-.tr_content_p1_2,
-.tr_content_p1_3,
-.tr_content_p1_4{
-	opacity: 0;
-}
-
-
-.tr_content_p1 > p {
-	position: absolute;
-	font-size: 30px;
-	color: white;
-	margin-top: -100px;
-}
-
-.tr_content button {
-	position: absolute;
-	font-size: 20px;
-	color: white;
-	width: 350px;
-	height: 50px;
-	background-color: gray; 
-	margin-left: -170px;
-	margin-top: 30px;
-	border-radius: 5px 5px;
-}
-
-.tr_content button:hover{
-	background-color: royalblue;
-	color: yellow;	
-	cursor: pointer;
-}
-
-.tr_content_p1 p{
-	color: white;
-	position: relative;
-	margin: auto;
-	top: 250px;
-	margin-bottom: 50px;
-}
 
 
 /* 트레이너 */
-.re_tr_box{
-	width: 500px;
-	height:700px;
-	margin: 0 auto;
-	margin-top: 40px;
-	box-sizing:border-box;
-	border:2px solid black;
-}
-.re_tr{
-	text-align:center;
-	font-size:25px;
-	margin-top:-100px;
-}
-.re_trinaer{
-	width: 1300px;
-	margin: auto;
-	display: flex;
-	position: relative;
-}
-.re_trainer img{
-	justify-content:center;
-	align-items:center;
-	margin-top:20px;
-}
-.other_tr h2{
-	text-align:center;
-	color:blue;
-	margin-top:100px;
-	margin-bottom:120px;
-}
 
 .trainer {
 	width: 1300px;
@@ -1271,38 +1192,31 @@ tesssst
 
 .trainer_1 {
 	width: 305px;
-	height: 600px;
+	height: 500px;
 	border: 0.5px solid;
 	margin: 10px; 
 } 
 
 .trainer_2 {
 	width: 305px;
-	height: 600px;
+	height: 500px;
 	border: 0.5px solid;
 	margin: 10px;  
 } 
 
 .trainer_3 {
 	width: 305px;
-	height: 600px;
+	height: 500px;
 	border: 0.5px solid;
 	margin: 10px;  
 } 
 
 .trainer_4 {
 	width: 305px;
-	height: 600px;
+	height: 500px;
 	border: 0.5px solid;
 	margin: 10px;  
-}
-
-.re_trainer p{
-	text-align:center;	
-	position:relative;
-	top:50%;
-	font-size:15px;
-}
+} 
 
 .trainer_1 p, 
 .trainer_2 p, 
@@ -1312,21 +1226,6 @@ tesssst
  	top: 50%;
 }
 
-.retr_btn{
-	margin:auto;
-	margin-top:30px;
-	width: 350px;
-	height: 80px;
-	cursor: pointer;
-	font-size: 20px;
-}
-.tr_btn{
-	margin:auto;
-	margin-top:30px;
-	width: 280px;
-	height: 80px;
-	cursor: pointer;
-}
 
 
 
@@ -1405,7 +1304,7 @@ tesssst
 	line-height: 3rem;
 	color: #222;
 	font-size: 2.6rem;
-	letter-spacing: -.81px
+	letter-spacing: -.81px;
 }
 
 .help_service_list {
