--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -514,12 +514,19 @@ img {
 
 
 /* 게시판 */
+.board_top h1{
+	
+}
+.board_top select{
+	
+}
 
 #customers {
   margin: 50px auto;
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 60%;
+  
 }
 
 #customers textarea {
@@ -1159,7 +1166,7 @@ tesssst
 .tr_content {
     margin: auto;
     width: 70%;
-    height: 900px;
+    height: 1100px;
     background-color: transparent;
     animation: fadein 3s;
  	-webkit-animation: fadein 3s; /* Safari and Chrome */
@@ -1184,8 +1191,8 @@ tesssst
 /* 매칭 로딩 */
 .loader {
 	 position: absolute;
-	 left: 45%;
-	 top: 30%;
+	 left: 47%;
+	 top: 25%;
 	 border: 16px solid #f3f3f3;
 	 border-radius: 50%;
 	 border-top: 16px solid #3498db;
@@ -1374,7 +1381,7 @@ tesssst
 	cursor: pointer;
 	font-size: 20px;
 }*/
-.retr_btn button {
+.retr_btn{
 	font-size: 30px;
 	margin-top:30px;
     position: relative;
@@ -1394,11 +1401,11 @@ tesssst
     transition: 0.3s;
 }
 
-.retr_btn button:hover {
+.retr_btn:hover {
     transform: scale(1.2);
 }
 
-.retr_btn button:hover::after {
+.retr_btn:hover::after {
     content: "";
     width: 30px;
     height: 30px;
@@ -1411,6 +1418,7 @@ tesssst
     transform: translate(-50%, -50%);
     animation: ring 1.5s infinite;
 }
+
 @keyframes ring {
     0% {
         width: 30px;
@@ -1424,13 +1432,14 @@ tesssst
     }
 }
 
-.tr_btn button{
+.tr_btn{
 	margin:auto;
 	margin-top:30px;
 	width: 280px;
 	height: 80px;
 	cursor: pointer;
 }
+
 
 /* 상담 페이지 */
 .consult_main{
@@ -1462,34 +1471,74 @@ tesssst
 	font-size: 27px;	
 }*/
 
-.consult_page1 input[type=text]{
-	margin-top:50px;
-	margin-left:20%;
-	width:50%;
-	height:400px;
-	font-size:25px;
-	display:inline-flex;
-	position:relative;
-	text-align:center;
-	animation: fadein 3s;
- 	-webkit-animation: fadein 3s; /* Safari and Chrome */
+/* #customers {
+  margin: 50px auto;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+  
+}
+
+#customers textarea {
+	width: 100%;
+	height: 250px;
+	font-size: 20px;
 }
 	
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: gray;
+  color: white;
+}
+
+.consult_page1 textarea{
+	width: 100%;
+	height: 250px;
+	margin-top:50px;
+	font-size:25px;
+	text-align:center;
+	animation: fadein 3s;
+ 	-webkit-animation: fadein 3s; /* Safari and Chrome
+ 	border:none;
+ 	border-radius:50px; */
+}
+.consult_page1 textarea:hover {
+    transform: scale(1.2);
+}
+
+	
 .consult_page1 input[type=button]{
-	width: 5%;
-	height:410px;
-	display:inline-flex;
+	background-color:white;
+	color:black;
+	min-width: 200px;
+    min-height: 100px;
+	border:none;
+	border-radius:1000px;
 	position:relative;
 	cursor:pointer;
-	margin-left: 50px;
+	margin-left: 46%;
 	text-align:center;
-	font-size:18px;
+	font-size:23px;
+	font-weight: 700;
+    transition: 0.3s;
 	animation: fadein 3s;
  	-webkit-animation: fadein 3s; /* Safari and Chrome */
 }
 .consult_page1 input[type=button]:hover{
 	background-color:royalblue;
 	color:white;
+	transform: scale(1.2);
 }
 
 
