--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -514,18 +514,148 @@ img {
 
 
 /* 게시판 */
-.board_top h1{
-	
-}
-.board_top select{
-	
+/* 게시판 이름 */
+.board_name {
+	position:sticky;
+	margin-top:15px;
+	width: 100%;  
+	height: 100%;
+	background: transparent;
+	-webkit-font-smoothing: antialiased;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
+.board_name h1 {
+  height: 10px;
+}
+
+.board_name h1 span {
+	position: relative;
+	top: 15px;
+	display: inline-block;
+	animation: bounce 1.5s ease infinite alternate;
+	font-family: system-ui;
+	font-size: 100px;
+	color: #4169e1;
+	text-shadow: 0 1px 0 #CCC,
+	               0 2px 0 #CCC,
+	               0 3px 0 #CCC,
+	               0 4px 0 #CCC,
+	               0 5px 0 #CCC,
+	               0 6px 0 transparent,
+	               0 7px 0 transparent,
+	               0 8px 0 transparent,
+	               0 9px 0 transparent,
+	               0 10px 10px rgba(0, 0, 0, .4);
+	}
+	
+	h1 span:nth-child(2) { animation-delay: .1s; }
+	h1 span:nth-child(3) { animation-delay: .2s; }
+	h1 span:nth-child(4) { animation-delay: .3s; }
+	h1 span:nth-child(5) { animation-delay: .4s; }
+	h1 span:nth-child(6) { animation-delay: .5s; }
+	h1 span:nth-child(7) { animation-delay: .6s; }
+	h1 span:nth-child(8) { animation-delay: .7s; }
+
+@keyframes bounce {
+  100% {
+    top: -20px;
+    text-shadow: 0 1px 0 #CCC,
+                 0 2px 0 #CCC,
+                 0 3px 0 #CCC,
+                 0 4px 0 #CCC,
+                 0 5px 0 #CCC,
+                 0 6px 0 #CCC,
+                 0 7px 0 #CCC,
+                 0 8px 0 #CCC,
+                 0 9px 0 #CCC,
+                 0 50px 25px rgba(0, 0, 0, .2);
+  }
+}
+/* 게시판 메인 이미지 */
+
+
+/* 게시판 주제선택 */
+.board_nav{
+	position:relative;
+	top:20px;
+	bottom:20px;
+	left:29%;
+}
+.board_nav select{
+	width:200px;
+	padding: .8em .5em;
+	border:none;
+	border-radius:7px;
+	background: url('/project/resources/image/board/select_icon.png') no-repeat 95% 50%;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background-color:#5e86c4;
+	color:white;
+	margin:10px;
+	animation: fadein 2s;
+ 	-webkit-animation: fadein 2s; /* Safari and Chrome */
+ 	cursor:pointer;
+ 	box-sizing:border-box;
+ 	box-shadow: 3px 3px 3px 3px gray;
+}
+
+
+.board_nav select option{
+	background:royalblue;
+	color:white;
+	padding: 3px 0;
+	font-size: 18px;
+}
+
+.board_nav select option::placeholder{
+	color:white;
+	font-style:italic;
+}
+
+/* 게시판 검색창 */
+#keywordInput{
+	width:250px;
+	padding: .8em .5em;
+	border:none;
+	border-radius:7px;
+	background-color:#5e86c4;
+	color:white;
+	margin:10px;
+ 	box-shadow: 3px 3px 3px 3px gray;
+	animation: fadein 2s;
+ 	-webkit-animation: fadein 2s; /* Safari and Chrome */
+}
+#keywordInput::placeholder {
+  color: white;
+  font-style: italic;
+}
+/* 게시판 버튼 */
+#searchBtn{
+	width:100px;
+	padding: .8em .5em;
+	border:none;
+	border-radius:7px;
+	background-color:#5e86c4;
+	color:white;
+	box-shadow: 3px 3px 3px 3px gray;
+	animation: fadein 2s;
+ 	-webkit-animation: fadein 2s; /* Safari and Chrome */
+ 	cursor:pointer;
+}
+/***/
+
+/* 메인 게시판 */
 #customers {
-  margin: 50px auto;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 60%;
+	margin: 50px auto;
+	font-family: Arial, Helvetica, sans-serif;
+	border:none;
+	width: 90%;
+	animation: fadein 3.3s;
+ 	-webkit-animation: fadein 3.3s; /* Safari and Chrome */
   
 }
 
@@ -534,26 +664,33 @@ img {
 	height: 250px;
 	font-size: 20px;
 }
+#customers th{
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border: none;
+	background-color:black;
+	color:white;
+	text-align:center;
+	font-size: 17px;
+}
 	
-#customers td, #customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
+#customers td{
+	border: none;
+	padding:28px;
+	margin:auto;
+	font-size:24px;
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+/*#customers tr:nth-child(even){
+	background-color:#78ccfe;
+}*/
 
-#customers tr:hover {background-color: #ddd;}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: center;
-  background-color: gray;
-  color: white;
+#customers tr:hover {
+	background-color: #5e86c4;
 }
 
 
-/*pagination*/
+/*pagination 게시판 갯수 */
 
 .pagination {
   display: inline-block;
