--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -881,10 +881,10 @@ border-radius: 5px;
 	margin-bottom: 20px;
 }
 
-.ex_sub a {
-	color: black;
-	text-decoration: none;
-}
+/* .ex_sub a { */
+/* 	color: black; */
+/* 	text-decoration: none; */
+/* } */
 
 .ex_content_p2 {
 	width: 900px;
