--- a/project/src/main/webapp/resources/css/include_template.css
+++ b/project/src/main/webapp/resources/css/include_template.css
@@ -5,6 +5,30 @@
 	padding: 0;
 }
 
+.progress {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 10px;
+	background-color: #a38678;
+	z-index: 2;
+}
+
+section {
+	min-height: 100vh;
+	width: 100%;
+}
+
+section:first-of-type {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+section:nth-child(odd) {
+	background-color: lightblue;
+}
+
 .header {
 	width: 100%;
 	position: sticky;
