--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -877,7 +877,7 @@ img {
 	position: relative;
 	font-size: 50px;
 	color: white;
-	margin-left: 800px;
+	margin-left: 700px;
 	margin-top: -400px;
 }
 
@@ -885,7 +885,7 @@ img {
 	position: relative;
 	font-size: 30px;
 	color: white;
-	margin-left: 750px;
+	margin-left: 700px;
 /* 	margin-top: -250px; */
 }
 
@@ -1061,9 +1061,29 @@ img {
 	height: 250px;
 	margin: auto;
 	margin-top: 30px;
-	display: flex;
+/* 	display: flex; */
 }
 
+.ex_content_p6 > button {
+	position: relative;	
+	font-size: 20px;
+	color: white;
+	margin: auto;
+	width: 280px;
+	height: 50px;
+	top: 50px;
+	background-color: purple; 
+	border-radius: 50px;
+}
+
+.ex_sub button {
+	width: 200px;
+	height: 25px;
+	border-radius: 50px;
+	color: white;
+	background-color: purple; 
+	margin-bottom: 5px;
+}
 
 
 
