--- a/project/src/main/webapp/resources/css/schedule.css
+++ b/project/src/main/webapp/resources/css/schedule.css
@@ -74,7 +74,7 @@ A:hover {
 }
 
 .navigation {
-	margin-top: 100px;
+/* 	margin-top: 100px; */
 	margin-bottom: 30px;
 	text-align: center;
 	font-size: 25px;
