--- a/project/src/main/webapp/resources/css/include_template.css
+++ b/project/src/main/webapp/resources/css/include_template.css
@@ -3,6 +3,7 @@
 	font-family: 'Noto Sans KR', 'Apple SD Gothic', '맑은고딕', sans-serif;
 	margin: 0;
 	padding: 0;
+	list-style:none;
 }
 
 .progress {
@@ -11,7 +12,7 @@
 	left: 0;
 	height: 10px;
 	background-color: #a38678;
-	z-index: 2;
+	z-index: 3;
 }
 
 section {
@@ -36,7 +37,7 @@ section:nth-child(odd) {
 	background-color: #fff;
 	height: 120px;
 	box-shadow: 0 4px 4px -4px black;
-	z-index: 1;
+	z-index: 2;
 	margin-right: auto;
 	margin-left: auto;
 }
