--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -1065,15 +1065,15 @@ img {
 }
 
 .ex_content_p6 > button {
-	position: relative;	
-	font-size: 20px;
-	color: white;
-	margin: auto;
-	width: 280px;
-	height: 50px;
-	top: 50px;
-	background-color: purple; 
-	border-radius: 50px;
+    position: relative;
+    font-size: 15px;
+    color: white;
+    margin: auto;
+    width: 100px;
+    height: 40px;
+    top: 30px;
+    background-color: purple;
+    border-radius: 50px;
 }
 
 .ex_sub button {
@@ -1084,6 +1084,90 @@ img {
 	background-color: purple; 
 	margin-bottom: 5px;
 }
+
+/* AI운동추천 사진 슬라이드 */
+#slider-wrap{
+  width:600px;
+  height:650px;
+  position:relative;
+  overflow:hidden;
+  margin-left: -20px;
+}
+	
+#slider-wrap ul#slider{
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0;
+  left:0;   
+}
+
+#slider-wrap ul#slider li{
+  float:left;
+  position:relative;
+  width:600px;
+  height:400px; 
+}
+
+#slider-wrap ul#slider li > div{
+  position:absolute;
+  top:20px;
+  left:35px;  
+}
+
+#slider-wrap ul#slider li img{
+  display:block;
+  width:100%;
+  height: 100%;
+}
+
+
+/*btns*/
+.btns{
+  position:absolute;
+  width:50px;
+  height:60px;
+  top:50%;
+  margin-top:-25px;
+  line-height:57px;
+  text-align:center;
+  cursor:pointer; 
+  background:rgba(0,0,0,0.1);
+  z-index:100;
+  
+  
+  -webkit-user-select: none;  
+  -moz-user-select: none; 
+  -khtml-user-select: none; 
+  -ms-user-select: none;
+  
+  -webkit-transition: all 0.1s ease;
+  -moz-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease;
+  -ms-transition: all 0.1s ease;
+  transition: all 0.1s ease;
+}
+
+.btns:hover{
+  background:rgba(0,0,0,0.3); 
+}
+
+#next{right:-50px; border-radius:7px 0px 0px 7px;}
+#previous{left:-50px; border-radius:0px 7px 7px 7px;}
+
+#slider-wrap.active #next{right:0px;}
+#slider-wrap.active #previous{left:0px;}
+
+
+/*ANIMATION*/
+#slider-wrap ul, #pagination-wrap ul li{
+  -webkit-transition: all 0.3s cubic-bezier(1,.01,.32,1);
+  -moz-transition: all 0.3s cubic-bezier(1,.01,.32,1);
+  -o-transition: all 0.3s cubic-bezier(1,.01,.32,1);
+  -ms-transition: all 0.3s cubic-bezier(1,.01,.32,1);
+  transition: all 0.3s cubic-bezier(1,.01,.32,1); 
+}
+
 
 
 
