--- a/project/src/main/webapp/resources/css/include_template.css
+++ b/project/src/main/webapp/resources/css/include_template.css
@@ -241,3 +241,34 @@ section:nth-child(odd) {
 	left: 10px;
 	font-size: 2em;
 }
+
+
+#members {
+  margin: 50px auto;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+}
+
+#members textarea {
+	width: 100%;
+	height: 250px;
+	font-size: 20px;
+}
+	
+#members td, #members th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#members tr:nth-child(even){background-color: #f2f2f2;}
+
+#members tr:hover {background-color: #ddd;}
+
+#members th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: gray;
+  color: white;
+}
