--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -857,7 +857,7 @@ img {
 	font-size:30px;
 }
 	
-.bt_save,.board_list,.board_update,.board_delete{
+.bt_save1,.board_list,.board_update,.board_delete{
 	background-color:royalblue;
 	color:white;
 	min-width: 200px;
@@ -880,11 +880,12 @@ img {
 	transform: scale(1.2);
 }
 
-.widthLine{
-	background-color:green;
-	width:100px;
-	padding:2px;
-	margin-bottom:20px;
+.widthLine2{
+	background-color:gray;
+	width:100%;
+	padding:4px;
+	margin-bottom:80px;
+	margin-top:100px;
 }
 
 /* 댓글 관련 */
@@ -1719,19 +1720,29 @@ img {
 	text-shadow: 2px 2px 7px rgba(65, 105, 225, 0.64);
 }
 
-.re_trainer{
-	
+.re_trainer h2{
+	text-shadow: 2px 2px 7px royalblue;
+}
+.re_trainer h4{
+	text-shadow: 0.5px 1px 1px royalblue;
 }
 .re_trainer img{
 	justify-content:center;
 	align-items:center;
 	margin-top:20px;
+	filter: drop-shadow(2px 2px 2px royalblue);
 }
 .other_tr h2{
+	background-image:url("/project/resources/image/trainer/banner1.png");
+	background-repeat:no-repeat;
+	background-position: 50% 50%;
 	text-align:center;
+	height:200px;
 	color:blue;
+	padding-top:50px;
 	margin-top:100px;
 	margin-bottom:120px;
+	font-size: 35px;
 	text-shadow: 2px 2px 7px white;
 }
 
@@ -1740,34 +1751,43 @@ img {
 	margin: auto;
 	display: flex;
 	position: relative;
+	animation: fadein 8s;
+ 	-webkit-animation: fadein 8s; /* Safari and Chrome */
+}
+.trainer img{
+	border-radius:70%;
 }
 
 .trainer_1 {
 	width: 305px;
 	height: 600px;
-	border: 0.5px solid;
-	margin: 10px; 
+	border: none;
+	margin: 10px;
+	filter: drop-shadow(0.5px 1px 1px red); 
 } 
 
 .trainer_2 {
 	width: 305px;
 	height: 600px;
-	border: 0.5px solid;
-	margin: 10px;  
+	border: none;
+	margin: 10px; 
+	filter: drop-shadow(0.5px 1px 1px yellow);
 } 
 
 .trainer_3 {
 	width: 305px;
 	height: 600px;
-	border: 0.5px solid;
-	margin: 10px;  
+	border: none;
+	margin: 10px; 
+	filter: drop-shadow(0.5px 1px 1px green);
 } 
 
 .trainer_4 {
 	width: 305px;
 	height: 600px;
-	border: 0.5px solid;
-	margin: 10px;  
+	border: none;
+	margin: 10px;
+	filter: drop-shadow(0.5px 1px 1px purple);
 }
 
 .re_trainer p{
@@ -1845,11 +1865,39 @@ img {
 }
 
 .tr_btn{
-	margin:auto;
-	margin-top:30px;
-	width: 280px;
+	width: 220px;
 	height: 80px;
-	cursor: pointer;
+	font-size: 30px;
+	margin-top:30px;
+    position: relative;
+    border: none;
+    min-width: 150px;
+    min-height: 40px;
+    background: black;
+    border-radius: 500px;
+    color: #ffffff;
+    cursor: pointer;
+    box-shadow: 2px 2px 7px gray;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+.tr_btn:hover {
+    transform: scale(1.1);
+}
+
+.tr_btn:hover::after {
+    content: "";
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border: 4px solid gray;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
 }
 
 
