--- a/project/src/main/webapp/resources/css/include_template.css
+++ b/project/src/main/webapp/resources/css/include_template.css
@@ -52,9 +52,9 @@ section:nth-child(odd) {
 /*     width: 1500px; */
 /*     margin: auto; */
 /* } */
-.navbar1 ul {
+.navbar1 > ul {
 	flex: 1;
-	/*     height: 120px; */
+	height: 120px;
 	/*     text-align: center; */
 }
 
