--- a/project/src/main/webapp/resources/css/template.css
+++ b/project/src/main/webapp/resources/css/template.css
@@ -1039,8 +1039,8 @@ img {
 	width: 350px;
 	height: 50px;
 	background-color: purple; 
-/* 	margin-left: -100px; */
-	margin-top: 230px;
+	margin-left: 700px;
+	margin-top: 50px;
 	border-radius: 50px;
 }
 
@@ -1109,11 +1109,6 @@ img {
 	margin-bottom: 20px;
 }
 
-/* .ex_sub a { */
-/* 	color: black; */
-/* 	text-decoration: none; */
-/* } */
-
 .ex_content_p2 {
 	width: 900px;
 	height: 500px;
@@ -1164,7 +1159,8 @@ img {
 
 .ex_content_p4 p {
 	font-size: 20px;
-	margin-bottom: 15px;
+/* 	margin-bottom: 15px; */
+	margin-right: 30px;
 }
 
 .ex_content_p5 {
